--- a/April01WebSocketApp/pom.xml
+++ b/April01WebSocketApp/pom.xml
@@ -9,24 +9,37 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.mandal.chat</groupId>
-    <artifactId>SpringBootWebSocketApplication001</artifactId>
+    <artifactId>April01WebSocketApp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SpringBootWebSocketApplication001</name>
-    <description>SpringBootWebSocketApplication001</description>
+    <name>April01WebSocketApp</name>
+    <description>April01WebSocketApp</description>
     <properties>
         <java.version>17</java.version>
     </properties>
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-test</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
-<!--        &lt;!&ndash; MySQL Connector/J &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--&lt;!&ndash;            <version>8.0.27</version> &lt;!&ndash; Replace with the desired version &ndash;&gt;&ndash;&gt;-->
-<!--        </dependency>-->
+        <!--        &lt;!&ndash; MySQL Connector/J &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>mysql</groupId>-->
+        <!--            <artifactId>mysql-connector-java</artifactId>-->
+        <!--&lt;!&ndash;            <version>8.0.27</version> &lt;!&ndash; Replace with the desired version &ndash;&gt;&ndash;&gt;-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,12 +77,6 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-<!--            <version>2.15.4</version> &lt;!&ndash; Use the latest version &ndash;&gt;-->
-        </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
