--- a/SpringBootWebSocketApplication001/pom.xml
+++ b/SpringBootWebSocketApplication001/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>jackson-databind</artifactId>
 <!--            <version>2.15.4</version> &lt;!&ndash; Use the latest version &ndash;&gt;-->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
